fixed broken link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
 				<section>
                     <h2>group mind</h2>
-                    <p><a hre="http://greatergood.berkeley.edu/article/item/what_mel_brooks_can_teach_us_about_group_flow/">What Mel Brooks Can Teach Us about “Group Flow”</a></p>
+                    <p><a href="http://greatergood.berkeley.edu/article/item/what_mel_brooks_can_teach_us_about_group_flow/">What Mel Brooks Can
+                        Teach Us about “Group Flow”</a></p>
                     <ul>
                         <li class="fragment">have a compelling vision and a shared mission</li>
                         <li class="fragment">respond genuinely (don’t plan ahead)</li>
